<resources>
    <!-- Preferences -->
    <string name="pref_title">Préférences</string>
    <string name="pref_port_serveur">Port serveur</string>
    <string name="pref_port_rfxlan">Port RFX-Lan</string>
    <string name="pref_port_summary">Numéro de port</string>
    <string name="pref_reseau">Réseau</string>
    <string name="pref_general">Général</string>
    <string name="pref_service">Service</string>
    <string name="pref_client_poll_title">Période de mise à jour client</string>
    <string name="pref_boot_title">Démarrer au boot</string>
    <string name="pref_boot_summary_on">Lance le service au démarrage du téléphone</string>
    <string name="pref_boot_summary_off">Lance le service lorsqu\'il est requis</string>
    <string name="pref_keepservice_title">Garder le service toujours actif</string>
    <string name="pref_keepservice_summary_off">Arrete le service en quittant</string>
    <string name="pref_keepservice_summary_on">Le service reste actif même en quittant</string>
</resources>
